# zynamics

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml  publish.yml
configs/dataset/: lorenz.yaml
configs/experiment/: cassm_lorenz.yaml  gpfa_lorenz.yaml
configs/model/: cassm.yaml  gpfa.yaml
docs/: gpfa_port_notes.md  index.md  model_output_contract.md
docs/assets/: .gitkeep
docs/models/: cassm.md  gpfa.md  index.md
examples/: smoke_compare.py
overrides/: 404.html  main.html  nav-sub.html
scripts/: benchmark_lorenz_loss_curves.py  benchmark_lorenz_scaling.py  generate_model_docs.py
site/: 404.html  index.html  sitemap.xml
site/gpfa_port_notes/: index.html
site/model_output_contract/: index.html
site/models/: index.html
site/models/cassm/: index.html
site/models/gpfa/: index.html
site/optimizer_contract/: index.html
site/search/: search_index.json
site/stylesheets/: minimal.css
src/ladys/: __init__.py  config.py  preprocessing.py  types.py
src/ladys/datasets/: __init__.py  lorenz.py
src/ladys/models/: __init__.py  base.py  cassm.py  gpfa.py
src/ladys/training/: __init__.py  strategies.py  trainer.py
src/zynamics/: __init__.py  config.py
src/zynamics/datasets/: __init__.py
src/zynamics/models/: __init__.py  base.py  cassm.py  gpfa.py
src/zynamics/training/: __init__.py  strategies.py  trainer.py
src/zynamics/utils/: yaml.py
tests/: test_model_docs.py  test_smoke.py
website/: index.html
