[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zynamics"
version = "0.1.0"
description = "PyTorch benchmark scaffolding for latent neural dynamics models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2",
  "scipy>=1.10",
  "torch>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
docs = ["mkdocs>=1.6"]

[tool.setuptools.packages.find]
where = ["src"]
