[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ladys"
version = "0.1.0"
description = "PyTorch benchmark scaffolding for latent neural dynamics models."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Jon Huml" },
]
keywords = ["latent-dynamics", "neuroscience", "pytorch", "benchmarking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2",
  "scipy>=1.10",
  "torch>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
docs = ["mkdocs>=1.6"]

[project.scripts]
ladys = "ladys.cli:main"

[project.urls]
Homepage = "https://zkunkworks.com/"
Documentation = "https://zkunkworks.com/ladys/"
Repository = "https://github.com/jonathanhuml/ladys"
Issues = "https://github.com/jonathanhuml/ladys/issues"

[tool.setuptools.packages.find]
where = ["src"]
